log/build_2026-04-11_21-23-48/warehouse_robot/stderr.log
  File "/home/ayu/warehouse_robot_ws/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot/swarm_controller_node.py", line 1
    ```python
    ^
SyntaxError: invalid syntax

